# Dell-Lookup

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  bulk-model-add.py  get-extended-info.py
src/dell_lookup/: __init__.py  cli.py  client.py  config.py
