[project]
name = "dell-lookup"
version = "0.1.0"
description = "Quick Dell API lookups and scripts and stuff"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dell_lookup"]
